fixed home button spacing

--- a/css/NewCatalog.styl
+++ b/css/NewCatalog.styl
@@ -202,7 +202,7 @@
 #newCatalogRoot #homeButton
 	width 60%
 	padding-top 15%
-	padding-left 20%
+	padding-left 10%
 	position absolute
 
 #newCatalogRoot #homeButtonArea
